<resources>
    <string name="app_name">WordWizard</string>
    
    <!-- Onboarding -->
    <string name="welcome_title">Welcome to WordWizard!</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="name_hint">Your name</string>
    <string name="start_playing">Start Playing</string>
    <string name="name_required">Please enter your name to continue</string>
    
    <!-- Game Screen -->
    <string name="score_label">Score:</string>
    <string name="attempts_label">Attempts:</string>
    <string name="time_label">Time:</string>
    <string name="level_label">Level:</string>
    <string name="guess_word">Guess the Word</string>
    <string name="enter_guess">Enter your guess</string>
    <string name="submit_guess">Submit Guess</string>
    <string name="check_letter">Check Letter</string>
    <string name="word_length">Word Length</string>
    <string name="get_hint">Get Hint</string>
    <string name="new_game">New Game</string>
    <string name="view_leaderboard">Leaderboard</string>
    
    <!-- Letter Check Dialog -->
    <string name="check_letter_title">Check Letter Occurrence</string>
    <string name="enter_letter">Enter a letter</string>
    <string name="letter_hint">Letter</string>
    <string name="check">Check</string>
    <string name="cancel">Cancel</string>
    <string name="cost_5_points">Cost: 5 points</string>
    
    <!-- Messages -->
    <string name="correct_guess">Congratulations! You guessed correctly!</string>
    <string name="wrong_guess">Wrong guess! Try again.</string>
    <string name="game_over">Game Over! The word was: %s</string>
    <string name="level_up">Level Up! New word loaded.</string>
    <string name="letter_count">The letter \'%s\' appears %d time(s) in the word</string>
    <string name="word_length_info">The word has %d letters</string>
    <string name="hint_available">Hint available after 5th attempt</string>
    <string name="hint_info">Hint: %s</string>
    <string name="insufficient_score">Insufficient score for this action</string>
    <string name="enter_valid_letter">Please enter a valid letter</string>
    <string name="enter_valid_word">Please enter a valid word</string>
    <string name="loading">Loading...</string>
    <string name="network_error">Network error. Please check your connection.</string>
    <string name="api_error">Failed to fetch data. Please try again.</string>
    
    <!-- Leaderboard -->
    <string name="leaderboard_title">Global Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="close">Close</string>
    <string name="no_scores">No scores yet. Be the first!</string>
    <string name="loading_leaderboard">Loading leaderboard...</string>
</resources>
